@@ -110,6 +110,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8083. Move dfs.client.write.* conf from DFSConfigKeys to 
     HdfsClientConfigKeys.Write.  (szetszwo)
 
+    HDFS-8117. More accurate verification in SimulatedFSDataset: replace
+    DEFAULT_DATABYTE with patterned data. (Zhe Zhang via wang)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
